--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "bawjensen.github.io",
-  "private": true,
-  "version": "0.0.0",
-  "description": "Personal website/sandbox environment to test things in",
-  "repository": "https://github.com/bawjensen/bawjensen.github.io",
-  "license": "MIT",
-  "devDependencies": {
-    "http-server": "^0.6.1"
-  },
-  "scripts": {
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1"
-  },
-  "dependencies": {}
+    "name": "bawjensen.github.io",
+    "private": true,
+    "version": "0.0.1",
+    "description": "Personal website/sandbox",
+    "repository": "https://github.com/bawjensen/bawjensen.github.io",
+    "devDependencies": {
+        "@types/node": "^18.0.0",
+        "@types/react": "^18.0.14",
+        "eslint": "^8.19.0",
+        "eslint-config-next": "12.2.0",
+        "eslint-config-prettier": "^8.5.0",
+        "next": "^12.2.0",
+        "prettier": "^2.7.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^4.7.4"
+    },
+    "scripts": {}
 }
